--- a/db/configurations/goodmoves/partials/organisation/search-result.hbs
+++ b/db/configurations/goodmoves/partials/organisation/search-result.hbs
@@ -2,8 +2,7 @@
   <div class="mdc-card__info--organisation-row">
     <div class="mdc-card__info--organisation">
       <div class="mdc-card__info--organisation-title mdc-typography--headline6">
-        <a href="/organisation/{{slug}}">{{title}}</span>
-        </a>
+        <a href="/organisation/{{slug}}">{{title}}</a>
       </div>
     </div>
     {{#if has_logo ~}}
