--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -11,6 +11,10 @@
         <span class="far fa-map-marker-alt fa-fw" aria-hidden="true"></span>
         Location
       </a>
+      <a class="mdc-tab" role="tab" aria-controls="panel-3">
+        <span class="far fa-edit fa-fw" aria-hidden="true"></span>
+        Your notes
+      </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
     <hr class="mdc-list-divider" />
@@ -167,6 +171,16 @@
             "{{location}}"
           </p>
           {{/if}}
+        </div>
+      </div>
+      <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true" id="panel-3">
+        <div class="text-field-container user-notes">
+          <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--dense mdc-text-field--textarea" data-mdc-auto-init="MDCTextField">
+            <textarea id="user-notes" class="mdc-text-field__input"></textarea>
+            <label class="mdc-floating-label" for="user-notes">
+              Your notes
+            </label>
+          </div>
         </div>
       </div>
     </div>
