--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -33,7 +33,7 @@
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.volunteering.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        {{{_source.rendered.goodhq_list}}}
+        {{{_source.rendered.goodmoves_list}}}
       </div>
       {{/each ~}}
     </div>
@@ -53,7 +53,7 @@
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.posts.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        {{{_source.rendered.goodhq_list}}}
+        {{{_source.rendered.goodmoves_list}}}
       </div>
       {{/each ~}}
     </div>
@@ -73,7 +73,7 @@
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.reviews.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        {{{_source.rendered.goodhq_list}}}
+        {{{_source.rendered.goodmoves_list}}}
       </div>
       {{/each ~}}
     </div>
