--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -1034,6 +1034,7 @@ hr {
   }
   li.disabled a.pagination-arrow {
     cursor: default;
+    pointer-events: none;
     color: $brand-typography;
   }
   li:first-child a {
@@ -1056,6 +1057,9 @@ hr {
       color: white;
       text-decoration: none;
     }
+  }
+  li.disabled:hover {
+    background-color: inherit !important;
   }
 }
 
