--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -555,6 +555,7 @@ p.quote {
   }
   li.disabled a.pagination-arrow {
     cursor: default;
+    pointer-events: none;
     color: $mdc-theme-secondary;
   }
   li:first-child a {
@@ -577,6 +578,9 @@ p.quote {
       color: white;
       text-decoration: none;
     }
+  }
+  li.disabled:hover {
+    background-color: inherit !important;
   }
 }
 
