--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1893,6 +1893,7 @@ form#settled_status {
   }
   li.disabled a.pagination-arrow {
     cursor: default;
+    pointer-events: none;
     color: #999;
   }
   li:first-child a {
@@ -1913,6 +1914,9 @@ form#settled_status {
       color: white;
       text-decoration: none;
     }
+  }
+  li.disabled:hover {
+    background-color: inherit !important;
   }
 }
 
