Minor styling fix

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1027,6 +1027,8 @@ body {
         padding: 0;
         margin-bottom: $unit/2;
       }
+    }
+    .fa-ul.last {
       li:last-child {
         margin-bottom: 0;
       }
