--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -7,7 +7,7 @@
         <span class="hover-underline">{{title}}</span>
       </a>
     </div>
-    <ul class="fa-ul">
+    <ul class="fa-ul organisation">
       <li class="mdc-card__info--vacancy-organisation mdc-typography--body1">
         <span class="fa-li"><span class="far fa-building fa-fw" title="Organisation"></span></span>
         <a href="/organisation/{{organisation.slug}}">{{organisation.name}}</a>
@@ -16,7 +16,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <ul class="fa-ul">
+          <ul class="fa-ul first">
             {{#if location ~}}
             <li class="mdc-card__info--vacancy-location mdc-typography--body1">
               <span class="fa-li"><span class="far fa-map-marker-alt fa-fw" title="Location"></span></span>
@@ -32,7 +32,7 @@
           </ul>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <ul class="fa-ul">
+          <ul class="fa-ul last">
             {{#if salary ~}}
             <li class="mdc-card__info--vacancy-salary mdc-typography--body1">
               <span class="fa-li"><span class="far fa-calculator fa-fw" title="Salary"></span></span>
