--- a/db/configurations/goodmoves/partials/organisation/full.hbs
+++ b/db/configurations/goodmoves/partials/organisation/full.hbs
@@ -13,7 +13,7 @@
         {{/if ~}}
       </div>
       <div class="key-info-extra">
-        <ul class="fa-ul">
+        <ul class="fa-ul last">
           {{#if website ~}}
           {{#compare website "!==" null ~}}
           {{#compare website "!==" "http://" ~}}
