Added link back

--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -85,7 +85,7 @@
                 </h3>
                 <p>
                   Charities and individuals from across Scotland have been recognised for the life-changing difference they make at the 2018 Scottish Charity Awards, which took place at the Edinburgh International Conference Centre on Thursday 14 June.
-                  <!-- <a href="/scottish-charity-awards">Read more</a> -->
+                  <a href="/scottish-charity-awards">Read more</a>
                 </p>
               </div>
             </div>
