New case study for charter

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -273,6 +273,7 @@ a {
 .resources.help-others,
 .resources.reports,
 .resources.logos,
+.stories.govan-housing-association,
 .stories.cre8te-opportunites,
 .stories.glasgow-life,
 .stories.queens-cross,
