--- a/db/configurations/digitalparticipation/templates/stories-detail.hbs
+++ b/db/configurations/digitalparticipation/templates/stories-detail.hbs
@@ -8,6 +8,29 @@
     </div>
   </div>
   <div class="mdc-layout-grid__inner detail">
+    {{#compare request.params.slug "===" "govan-housing-association"}}
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+      <h3>“Committed to increasing people’s quality of life using digital technology as a driver for education, employment, social integration, financial inclusion and general health and wellbeing”</h3>
+      <p>&#8212; <strong><a href="/signatories/govan-housing-association-ltd">Govan Housing Association</a></strong></p>
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+      &nbsp;
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only m5">
+      <div class="pull-right expand">
+        <h3>
+          <a href="/stories">
+            <i class="fa fa-times-circle" aria-hidden="true"></i>
+          </a>
+        </h3>
+      </div>
+      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Govan Housing Association story page illustration" class="responsive-img margin-top" />
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="content"><p><strong>Scotland's first community-based housing provider, founded in 1971, Govan Housing Association signed the Digital Participation Charter as they are: “Committed to increasing people’s quality of life using digital technology as a driver for education, employment, social integration, financial inclusion and general health and wellbeing”.</strong></p><p>They recognise cost is a significant barrier to people on low incomes who struggle to find space in their household budget for internet and are unable to afford the devices required to access it. To try and tackle this, they offer a Tech Library, which gives people access to devices they can take home for up to two weeks at a time. They are working with technology suppliers to try and give tenants and their local community access to low cost, high speed broadband and are looking at moving some of their “traditional” services to more digital channels, such as an online portal and mobile app.</p><p>Rory Brown joined Govan Housing Association in 2017 as a Digital Inclusion Worker and since then has been working with tenants and other local organisations to increase access and break down digital barriers.</p><p>He initially started by organising a digital forum, gathering opinions and views from tenants and people in the Govan community, moving forward in 2018, he is hoping to extend this to include new digital projects and partnership events.</p><p>Currently Rory runs three digital hubs providing free access to computers, scanners and tablets with the opportunity to receive training and support in an informal and friendly environment. He is also hoping, with the support of Govan HA, to run digital pop up events. These events will aim to be engaging, fun and informative and will cover a range of topics such as virtual reality, gaming, music, arts, apps and workshops.</p><p>As an organisation, Govan HA are aware that one of the main barriers to digital participation continues to be confidence and motivation and are trying to tackle this by providing support to tenants on a one to one basis, even including home visits in this. They are also working with other social housing landlords in the South West of Glasgow to look at the potential of establishing a community Wi-Fi service.</p><p>Finally, Govan HA are committed to helping their workforce become more digitally aware and as part of this run in-house tech demos where staff can try new gadgets and technology and can also ask for support with their own devices.</p></div>
+      <hr class="margin-top" />
+    </div>
+    {{else}}
     {{#compare request.params.slug "===" "cre8te-opportunites"}}
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
       <h3>“Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty”</h3>
@@ -78,6 +101,7 @@
     </div>
     {{else}}
     <h3>Error 404: Page not found</h3>
+    {{/compare}}
     {{/compare}}
     {{/compare}}
     {{/compare}}
