--- a/db/configurations/digitalparticipation/templates/stories.hbs
+++ b/db/configurations/digitalparticipation/templates/stories.hbs
@@ -10,6 +10,35 @@
   <div class="mdc-layout-grid__inner expand skills">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
       <h3>
+        Govan Housing Association
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone hide-on-med-and-up">
+      <h3>
+        <a href="/stories/govan-housing-association">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-7-tablet">
+      <p>
+        “Committed to increasing people’s quality of life using digital technology as a driver for education, employment, social integration, financial inclusion and general health and wellbeing” <a href="/stories/govan-housing-association">Read more&hellip;</a>
+      </p>
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
+      <h3>
+        <a href="/stories/govan-housing-association">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      <hr class="nomargin" />
+    </div>
+  </div>
+  <div class="mdc-layout-grid__inner expand skills">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
+      <h3>
         Cre8te Opportunities Limited
       </h3>
     </div>
