Saved search mockup

--- a/db/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -26,7 +26,7 @@
               </div>
             </div>
             <label for="email-switch">
-              <span class="far fa-envelope fa-2x"></span>
+              <span class="far fa-envelope"></span>
             </label>
           </div>
         </div>
@@ -54,7 +54,7 @@
               </div>
             </div>
             <label for="email-switch2">
-              <span class="far fa-envelope fa-2x"></span>
+              <span class="far fa-envelope"></span>
             </label>
           </div>
         </div>
@@ -82,7 +82,7 @@
               </div>
             </div>
             <label for="email-switch3">
-              <span class="far fa-envelope fa-2x"></span>
+              <span class="far fa-envelope"></span>
             </label>
           </div>
         </div>
@@ -110,7 +110,7 @@
               </div>
             </div>
             <label for="email-switch4">
-              <span class="far fa-envelope fa-2x"></span>
+              <span class="far fa-envelope"></span>
             </label>
           </div>
         </div>
@@ -118,4 +118,70 @@
       <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
     </li>
   </ul>
+
+  <h2 class="mdc-typography--headline4 v-margin">
+    Email alert preferences
+  </h2>
+  <p class="mdc-typography--body1">
+    You have 1 saved search for your email alerts.
+  </p>
+
+  <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+    <select class="mdc-select__native-control" id="frequency" name="frequency">
+      <option value="undefined">Weekly</option>
+      <option value="daily">Daily</option>
+    </select>
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="frequency">
+      Frequency
+    </label>
+  </div>
+
+  <h3 class="mdc-typography--headline5 v-margin">
+    Select day
+  </h3>
+  <div class="mdc-switch">
+    <input type="checkbox" id="email-switch-mon" class="mdc-switch__native-control" role="switch" checked="checked">
+    <div class="mdc-switch__background">
+      <div class="mdc-switch__knob"></div>
+    </div>
+  </div>
+  <label for="email-switch-mon">
+    Monday
+  </label>
+  <div class="mdc-switch">
+    <input type="checkbox" id="email-switch-tue" class="mdc-switch__native-control" role="switch" checked="checked">
+    <div class="mdc-switch__background">
+      <div class="mdc-switch__knob"></div>
+    </div>
+  </div>
+  <label for="email-switch-tue">
+    Tuesday
+  </label>
+  <div class="mdc-switch">
+    <input type="checkbox" id="email-switch-wed" class="mdc-switch__native-control" role="switch" checked="checked">
+    <div class="mdc-switch__background">
+      <div class="mdc-switch__knob"></div>
+    </div>
+  </div>
+  <label for="email-switch-wed">
+    Wednesday
+  </label>
+  <div class="mdc-switch">
+    <input type="checkbox" id="email-switch-thu" class="mdc-switch__native-control" role="switch" checked="checked">
+    <div class="mdc-switch__background">
+      <div class="mdc-switch__knob"></div>
+    </div>
+  </div>
+  <label for="email-switch-thu">
+    Thursday
+  </label>
+  <div class="mdc-switch">
+    <input type="checkbox" id="email-switch-fri" class="mdc-switch__native-control" role="switch" checked="checked">
+    <div class="mdc-switch__background">
+      <div class="mdc-switch__knob"></div>
+    </div>
+  </div>
+  <label for="email-switch-fri">
+    Friday
+  </label>
 </div>
