--- a/db/configurations/scvo/templates/pages/page-cjs-employees.hbs
+++ b/db/configurations/scvo/templates/pages/page-cjs-employees.hbs
@@ -12,6 +12,7 @@
           {{> sidebar_cjs}}
         </div>
         {{> related_posts}}
+        {{> footer_cjs}}
       </div>
     </div>
   </div>
