--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1,3 +1,4 @@
+@import "./node_modules/material-components-web/material-components-web.scss";
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
 @import url('//fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600');
 
@@ -889,6 +890,7 @@ img.responsive {
 .mdc-list {
   font-family: $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $base-font-weight;
+  letter-spacing: 0.01rem;
 }
 .mdc-temporary-drawer .mdc-list-item {
   font-weight: 600;
@@ -1713,12 +1715,19 @@ form#settled_status {
           font-weight: 600;
           padding: 0 $unit*(3/4);
           .mdc-tab--label {
+            text-transform: none;
             line-height: $nav-height - 4px;
             height: $nav-height - 4px;
             display: block;
             border-top: 2px solid transparent;
             border-bottom: 2px solid transparent;
           }
+        }
+        .mdc-tab:hover::before,
+        .mdc-tab:hover::after,
+        .mdc-tab:focus::before,
+        .mdc-tab:focus::after {
+          opacity: 0 !important;
         }
         .mdc-tab:first-child {
           padding-left: 0;
@@ -3159,6 +3168,27 @@ body.post.author {
   .mdc-list-item:not(.mdc-ripple-upgraded):focus:before,
   .mdc-list-item:not(.mdc-ripple-upgraded):hover:before {
     opacity: 0.1;
+  }
+}
+.mdc-list {
+  .mdc-list-item {
+    padding: 0;
+    height: auto;
+  }
+  .mdc-list-item:hover {
+    text-decoration: none;
+    .mdc-list-item__text {
+      text-decoration: underline;
+    }
+    .mdc-list-item__meta {
+      text-decoration: none;
+    }
+  }
+  .mdc-list-item:hover::before,
+  .mdc-list-item:hover::after,
+  .mdc-list-item:focus::before,
+  .mdc-list-item:focus::after {
+    opacity: 0 !important;
   }
 }
 
@@ -4711,6 +4741,7 @@ button.swiper-pagination-bullet {
   .header-caption,
   .mdc-toolbar.mdc-toolbar--fixed,
   #share-menu-button,
+  .grid-info .social,
   header,
   footer {
     display: none;
