--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -79,7 +79,7 @@
                 </div>
               </div>
               <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                   <div class="mdc-menu-anchor">
                     <button class="mdc-button mdc-button--raised" data-menu-target="#sectors-menu">
                       Sectors
@@ -103,7 +103,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                   <div class="mdc-menu-anchor">
                     <button class="mdc-button mdc-button--raised" data-menu-target="#roles-menu">
                       Roles
@@ -127,7 +127,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                   <div class="mdc-menu-anchor">
                     <button class="mdc-button mdc-button--raised" data-menu-target="#regions-menu">
                       Regions
@@ -150,8 +150,8 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                </div> -->
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                   <div class="mdc-menu-anchor">
                     <button class="mdc-button mdc-button--raised" data-menu-target="#statuses-menu">
                       Statuses
