--- a/db/configurations/goodmoves/templates/pages/browse.hbs
+++ b/db/configurations/goodmoves/templates/pages/browse.hbs
@@ -11,15 +11,17 @@
                 Jobs by sector
               </div>
               <ul class="mdc-list">
-                {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
-                <li class="mdc-list-item">
+                {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
+                <a class="mdc-list-item" href="/search?sector={{urlencode key}}" role="menuitem">
                   <span class="mdc-list-item__text">
-                    <a href="/search?sector={{urlencode key}}">{{key}}</a>
+                    {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
+                      {{{key}}}
+                    {{/with ~}}
                   </span>
                   <span class="mdc-list-item__meta">
                     {{doc_count}}
                   </span>
-                </li>
+                </a>
                 {{/each ~}}
               </ul>
             </div>
@@ -28,19 +30,21 @@
                 Jobs by role
               </div>
               <ul class="mdc-list">
-                {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
-                <li class="mdc-list-item">
+                {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
+                <a class="mdc-list-item" href="/search?role={{urlencode key}}" role="menuitem">
                   <span class="mdc-list-item__text">
-                    <a href="/search?role={{urlencode key}}">{{key}}</a>
+                    {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
+                      {{{key}}}
+                    {{/with ~}}
                   </span>
                   <span class="mdc-list-item__meta">
                     {{doc_count}}
                   </span>
-                </li>
+                </a>
                 {{/each ~}}
               </ul>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="browse-title mdc-typography--headline5">
                 Jobs by region
               </div>
@@ -56,21 +60,23 @@
                 </li>
                 {{/each ~}}
               </ul>
-            </div>
+            </div> -->
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="browse-title mdc-typography--headline5">
                 Jobs by status
               </div>
               <ul class="mdc-list">
-                {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
-                <li class="mdc-list-item">
+                {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
+                <a class="mdc-list-item" href="/search?status={{urlencode key}}" role="menuitem">
                   <span class="mdc-list-item__text">
-                    <a href="/search?status={{urlencode key}}">{{key}}</a>
+                    {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
+                      {{{key}}}
+                    {{/with ~}}
                   </span>
                   <span class="mdc-list-item__meta">
                     {{doc_count}}
                   </span>
-                </li>
+                </a>
                 {{/each ~}}
               </ul>
             </div>
